# Rustemu86

./: .gitignore  .travis.yml  README.md
arch/riscv/: Cargo.toml
arch/riscv/isa/: instr_format.rs
arch/riscv/src/: csr.rs  debug.rs  decode.rs  execute.rs  fetch.rs  gpr.rs  isa.rs  lib.rs  lsu.rs  riscv.rs
arch/riscv/src/decode/: operand_fetch.rs
arch/riscv/src/instruction_level_tests/: mod.rs  rv32i.rs
arch/riscv/src/isa/: abi_name.rs  csr_map.rs  exceptions.rs  funct.rs  instr_format.rs  opcode.rs
arch/riscv/tests/: boot_zephyr.rs  rv32ui_p.rs
arch/riscv/tests/asm/: int_imm  int_imm.s
arch/riscv/tests/riscv_tests/: rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lbu  rv32ui-p-lh  rv32ui-p-lhu  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sh  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  rv32ui-p-slti  rv32ui-p-sltiu  rv32ui-p-sltu  rv32ui-p-sra  rv32ui-p-srai  rv32ui-p-srl  rv32ui-p-srli  rv32ui-p-sub  rv32ui-p-sw  rv32ui-p-xor  rv32ui-p-xori
arch/riscv/tests/zephyr/: zephyr.elf
arch/x86/: Cargo.toml
arch/x86/src/: decoder.rs  executor.rs  fetcher.rs  lib.rs
arch/x86/src/isa/: eflags.rs  mod.rs  modrm.rs  opcode.rs
arch/x86_64/: Cargo.toml
arch/x86_64/src/: decoder.rs  ex_stage.rs  exceptions.rs  fetcher.rs  lib.rs  register_file.rs
arch/x86_64/src/isa/: modrm.rs  opcode.rs  registers.rs
gui/: Cargo.toml
gui/src/: display.rs
rustemu86/: Cargo.toml
rustemu86/src/: args.rs  cpu.rs  display.rs  instructions.rs  lib.rs  loader.rs  main.rs  memory.rs  opcode.rs  options.rs  register_file.rs  rustemu86.rs
rustemu86/src/compatible/: decoder.rs  executor.rs  fetcher.rs  gpr.rs  mod.rs  status_regs.rs
rustemu86/src/compatible/isa/: mod.rs  modrm.rs  opcode.rs
rustemu86/src/cpu/: decoder.rs  ex_stage.rs  exceptions.rs  fetcher.rs  instruction.rs  mod.rs  model.rs  opcode.rs  register_file.rs
rustemu86/src/cpu/isa/: modrm.rs  opcode.rs  registers.rs
rustemu86/src/peripherals/: interconnect.rs  memory.rs  memory_access.rs  mod.rs  uart16550.rs
rustemu86/src/targets/: mod.rs
rustemu86/src/targets/riscv/: mod.rs
rustemu86/src/targets/x86/: decoder.rs  executor.rs  fetcher.rs  gpr.rs  mod.rs  status_regs.rs
rustemu86/src/targets/x86_64/: decoder.rs  ex_stage.rs  exceptions.rs  fetcher.rs  mod.rs  model.rs  (+1 more)
rustemu86/tests/: test_hello.rs  test_rust.rs  test_simple_asms.rs
rustemu86/tests/asms/: hello  hello.asm  jump  jump.asm  load_store  load_store.asm  push_pop  push_pop.asm  simple_add.asm  write_vga_text_buffer  write_vga_text_buffer.asm
todo/: todo.md
(+39 files in other folders)
