[package]
name = "gui"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
edition = "2018"

[dependencies]
bit_field = "0.9.0"
num = "0.2.0"
enum_primitive = "0.1.1"
gio= "0.2.0"
peripherals = { path = "../peripherals" }

[dependencies.gtk]
version = "0.2.0"
features = ["v3_16"]