[package]
name = "rustemu86"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]

[dependencies]
getopts = "0.2.18"
byteorder = "1.2.3"
failure = "0.1.2"
bit_field = "0.9.0"
enum_primitive = "0.1.1"
num = "0.2.0"
gio= "0.2.0"

[dependencies.gtk]
version = "0.2.0"
features = ["v3_16"]
