[package]
name = "rustemu86"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
edition = "2018"

[dependencies]
getopts = "0.2.18"
byteorder = "1.2.3"
failure = "0.1.2"
bit_field = "0.9.0"
bitflags = "1.0.1"
enum_primitive = "0.1.1"
num = "0.2.0"
gui = { path = "../gui" }
peripherals = { path = "../peripherals" }
loader = { path = "../loader" }
cpu = { path = "../cpu" }
debug = { path = "../debug" }