[package]
name = "riscv"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
edition = "2018"

[dependencies]
cpu = { path = "../../cpu" }
debug = { path = "../../debug" }
peripherals = { path = "../../peripherals" }
bitfield = "0.13.1"
bit_field = "0.9.0"
byteorder = "1.2.3"
failure = "0.1.3"