[package]
name = "x86"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
edition = "2018"

[dependencies]
rustemu86 = { path = "../../rustemu86" }
peripherals = { path = "../../peripherals" }
byteorder = "1.2.3"
bit_field = "0.9.0"
num = "0.2.0"
enum_primitive = "0.1.1"
bitflags = "1.0.1"