[package]
name = "x86_64"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]
edition = "2018"

[dependencies]
cpu = { path = "../../cpu" }
debug = { path = "../../debug" }
peripherals = { path = "../../peripherals" }
bit_field = "0.9.0"
byteorder = "1.2.3"
enum_primitive = "0.1.1"
num = "0.2.0"
failure = "0.1.2"
